force-app/main/default/objects/Case/fields/Maintenance_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Cycle__c</fullName>
    <label>Maintenance Cycle</label>
    <length>100</length>
    <type>Text</type>
</CustomField>