force-app/main/default/objects/Case/fields/Registration_Detail__c.field-meta.xml
<CustomField>
    <fullName>Registration_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration Detail</label>
    <referenceTo>Registration_Detail__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>