force-app/main/default/objects/Case/fields/service_date__c.field-meta.xml
<CustomField>
    <fullName>service_date__c</fullName>
    <label>service date</label>
    <type>Date</type>
</CustomField>