force-app/main/default/objects/Case/fields/Work_Part__c.field-meta.xml
<CustomField>
    <fullName>Work_Part__c</fullName>
    <label>Work Part</label>
    <length>100</length>
    <type>Text</type>
</CustomField>